--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
     "ic-ajax": "~1.x",
     "loader": "stefanpenner/loader.js#1.0.0",
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.1",
-    "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.1"
+    "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.1",
+
+    "ember-fastclick": "git@github.com:JamesHight/emberjs-touch.git"
   }
 }
