Fixes #17 adding an undo button to JSBin dialog

--- a/httpd.conf
+++ b/httpd.conf
@@ -1,5 +1,8 @@
 #Require all granted
 
+ProxyPass               /jsbin http://jsbin.com keepalive=On
+ProxyPassReverse        /jsbin http://jsbin.com
+
 ProxyPass               / http://0.0.0.0:4200/ keepalive=On
 ProxyPassReverse        / http://0.0.0.0:4200/
 
