Fixes #24 better caching for images

--- a/httpd.conf
+++ b/httpd.conf
@@ -1,4 +1,8 @@
 #Require all granted
+# enable expirations
+ExpiresActive On
+#ExpiresDefault           "access plus 1 week"
+ExpiresByType  image/*   "access plus 1 month"
 
 ProxyPass               /jsbin http://jsbin.com keepalive=On
 ProxyPassReverse        /jsbin http://jsbin.com
